fix(header): align action box with nav buttons

--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -40,7 +40,7 @@ header {
   > .actions {
     position: absolute;
     top: math.div($main-margin-size, 4);
-    right: $main-margin-size + $default-border-width + $default-box-shadow-size + $default-padding-size;
+    right: $main-margin-size + $default-border-width + $default-padding-size;
     @include border();
     @include box-shadow();
     box-sizing: border-box;
